--- a/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style.xml
+++ b/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style.xml
@@ -31,7 +31,7 @@
                 <gradient
                     android:angle="45"
                     android:startColor="#16F9AF"
-                     android:endColor="#A2F611"
+                     android:endColor="#39C5F7"
                     android:centerY="0.5"
                     android:type="linear"
                     />
