--- a/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style_thumb.xml
+++ b/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style_thumb.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#96F622"/>
+            <solid android:color="#39C5F7"/>
             <size
-                android:width="15dp"
-                android:height="15dp"/>
+                android:width="18dp"
+                android:height="18dp"/>
         </shape>
     </item>
 </layer-list>
