edit seekbar design-color and set default re-seekbar progress as 0

--- a/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style_2.xml
+++ b/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style_2.xml
@@ -30,8 +30,8 @@
                     android:radius="15dp" />
                 <gradient
                     android:angle="45"
-                    android:startColor="#FFFF00"
-                     android:endColor="#FF7600"
+                    android:startColor="#D618DB"
+                     android:endColor="#FF002A"
                     android:centerY="0.5"
                     android:type="linear"
                     />
