--- a/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style_thumb.xml
+++ b/AIUBStudent/app/src/main/res/drawable-xhdpi/seekbar_style_thumb.xml
@@ -2,6 +2,17 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
+            <solid android:color="#4039C5F7"/>
+            <size
+                android:width="18dp"
+                android:height="18dp"/>
+        </shape>
+    </item>
+    <item android:top="3dp"
+        android:left="3dp"
+        android:bottom="3dp"
+        android:right="3dp">
+        <shape android:shape="oval">
             <solid android:color="#39C5F7"/>
             <size
                 android:width="18dp"
