--- a/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
@@ -119,7 +119,7 @@
                         app:layout_constraintTop_toTopOf="@+id/progressBarBlue" />
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/calculated_Result_TextView"
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
 
