--- a/AIUBStudent/app/src/main/res/layout/result_calculation_fragment_template_layout.xml
+++ b/AIUBStudent/app/src/main/res/layout/result_calculation_fragment_template_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
      android:orientation="vertical"
-     >
+      >
 
 
 
@@ -17,10 +17,10 @@
         android:layout_marginBottom="20dp"
 
         app:cardCornerRadius="20dp"
-        app:cardElevation="5dp"
+        app:cardElevation="6dp"
         android:outlineSpotShadowColor="#1A91DD"
         android:outlineAmbientShadowColor="#1A91DD"
-        app:cardBackgroundColor="#E5EFF4"
+        app:cardBackgroundColor="#EBF5FA"
         >
 
         <LinearLayout
@@ -435,13 +435,13 @@
                 android:orientation="vertical"
                 android:id="@+id/retake_LinearLayout_part">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Previous Result of This Retake Course"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="#FF9800"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="0dp"
+                android:text="Previous Result of This Retake Course"
+                android:textColor="#FF9800" />
 
 
                         <LinearLayout
