--- a/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
@@ -77,7 +77,7 @@
                         android:layout_width="350dp"
                         android:layout_height="0dp"
 
-                        android:progress="90"
+                        tools:progress="90"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
                         style="@style/circularProgressBarGreen"
                         android:layout_width="300dp"
                         android:layout_height="300dp"
-                        android:progress="90"
+                        tools:progress="90"
 
                         app:layout_constraintBottom_toBottomOf="@+id/progressBarYellow"
                         app:layout_constraintEnd_toEndOf="@+id/progressBarYellow"
@@ -101,7 +101,7 @@
                         android:layout_width="250dp"
                         android:layout_height="0dp"
 
-                        android:progress="90"
+                        tools:progress="90"
                         app:layout_constraintBottom_toBottomOf="@+id/progressBarGreen"
                         app:layout_constraintEnd_toEndOf="@+id/progressBarGreen"
                         app:layout_constraintStart_toStartOf="@+id/progressBarGreen"
@@ -190,7 +190,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:maxLength="4"
-                                android:text="0.0"
+                                tools:text="0.0"
                                 android:textColor="@color/black"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
@@ -248,7 +248,7 @@
                                 android:id="@+id/student_current_cgpa"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="0.0"
+                                tools:text="0.0"
                                 android:textColor="@color/black"
                                 android:textSize="24sp"
                                 android:textStyle="bold"
@@ -305,7 +305,7 @@
                                 android:id="@+id/total_credit"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="0"
+                                tools:text="0"
                                 android:textColor="@color/black"
                                 android:textSize="24sp"
                                 android:textStyle="bold"
