complete the exit alert dialog process

--- a/AIUBStudent/app/src/main/res/layout/exit_dialog.xml
+++ b/AIUBStudent/app/src/main/res/layout/exit_dialog.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/exit_dialog_top_background"
             android:padding="10dp"
-            android:text="Warning"
+            android:text="@string/warning_title"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -50,7 +50,7 @@
             android:layout_marginTop="18dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="40dp"
-            android:text="Do you want to Exit."
+            android:text="@string/warning_message"
             android:gravity="center"
             android:textColor="@color/black"
             android:textSize="22sp"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:background="@drawable/exit_dialog_no_background"
-        android:text="NO"
+        android:text="@string/no"
         android:textColor="@color/white"
         android:textSize="14sp"
 
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:background="@drawable/exit_dialog_yes_background"
-        android:text="YES"
+        android:text="@string/yes"
         android:textColor="@color/white"
         android:textSize="14sp"
 
