--- a/AIUBStudent/app/src/main/res/values/styles.xml
+++ b/AIUBStudent/app/src/main/res/values/styles.xml
@@ -11,4 +11,14 @@
 <!--        <item name="android:windowLightStatusBar">true</item>-->
     </style>
 
+
+<!--    exit alert dialog theme-->
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+    </style>
+
+
+
+
+
 </resources>
