add loading and network-error animation.

--- a/AIUBStudent/app/src/main/res/values/styles.xml
+++ b/AIUBStudent/app/src/main/res/values/styles.xml
@@ -18,6 +18,14 @@
     </style>
 
 
+<!--    no internet theme-->
+    <style name="NoInternetTheme" parent="AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
 
 
 
