set total  credit according to department.

--- a/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
@@ -302,7 +302,7 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                             <TextView
-                                android:id="@+id/total_credit"
+                                android:id="@+id/total_completed_credit"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 tools:text="0"
@@ -312,7 +312,7 @@
                                 android:maxLength="4"/>
 
                             <TextView
-                                android:id="@+id/textView3"
+                                android:id="@+id/total_credit"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="/148" />
