--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -228,7 +228,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/textView3"
+                            android:id="@+id/total_completed_credit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="/148" />
