--- a/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_dashboard.xml
@@ -74,23 +74,23 @@
                     android:layout_width="350dp"
                     android:layout_height="0dp"
 
-                    tools:progress="90"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:progress="90" />
 
                 <ProgressBar
                     android:id="@+id/progressBarBlue"
                     style="@style/circularProgressBarBlue"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
-                    tools:progress="90"
-
                     app:layout_constraintBottom_toBottomOf="@+id/progressBarGreen"
+
                     app:layout_constraintEnd_toEndOf="@+id/progressBarGreen"
                     app:layout_constraintStart_toStartOf="@+id/progressBarGreen"
-                    app:layout_constraintTop_toTopOf="@+id/progressBarGreen" />
+                    app:layout_constraintTop_toTopOf="@+id/progressBarGreen"
+                    tools:progress="90" />
 
                 <ImageView
                     android:id="@+id/calculateCgpaButtonImageView"
@@ -166,10 +166,10 @@
                             android:id="@+id/student_current_cgpa"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            tools:text="3.16"
                             android:textColor="@color/black"
                             android:textSize="24sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            tools:text="3.16" />
 
                         <TextView
                             android:id="@+id/max_cgpa_four"
@@ -222,10 +222,10 @@
                             android:id="@+id/student_current_completed_credit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            tools:text="80"
                             android:textColor="@color/black"
                             android:textSize="24sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            tools:text="80" />
 
                         <TextView
                             android:id="@+id/total_completed_credit"
@@ -300,7 +300,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="end"
-                             android:padding="10dp"
+                            android:padding="10dp"
                             android:text="@string/share"
                             android:textColor="@color/circularProgressbarForegroundGreen"
                             android:textSize="16sp" />
