--- a/AIUBStudent/app/src/main/res/layout/fragment_home.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:background="@color/circularProgressbarBackgroundGray"
     tools:context=".HomeFragment">
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
