--- a/AIUBStudent/app/src/main/res/layout/fragment_profile.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_profile.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment"
-    android:background="@android:color/holo_blue_bright">
+    android:background="@color/circularProgressbarBackgroundGray"
+    tools:context=".ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="Profile fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:textSize="30sp" />
 
 </RelativeLayout>
