--- a/AIUBStudent/app/src/main/res/layout/loading.xml
+++ b/AIUBStudent/app/src/main/res/layout/loading.xml
@@ -32,7 +32,7 @@
         app:layout_constraintGuide_percent="0.66" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/loading_text_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
