--- a/AIUBStudent/app/src/main/res/layout/network_error.xml
+++ b/AIUBStudent/app/src/main/res/layout/network_error.xml
@@ -38,7 +38,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/loading_text_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -56,7 +56,7 @@
         android:text="@string/internet_connection_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/loading_text_message" />
 
     <Button
         android:id="@+id/connect_button"
